crates/antlr-rust-runtime/src/snapshots/antlr4_runtime__parser__tests__recovery_diagnostics_expose_the_offending_token_to_listeners.snap
---
source: crates/antlr-rust-runtime/src/parser.rs
expression: recorded
---
[
    RecordedDiagnostic {
        grammar_file_name: "Mini.g4",
        offending_text: Some(
            "oops",
        ),
        line: 1,
        column: 2,
        span: Some(
            0..4,
        ),
        message: "extraneous input 'oops'",
        error: None,
    },
]
